<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground"
    tools:context=".MainActivity">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/imageView2"
        android:src="@drawable/logo"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="65dp"
        android:layout_marginRight="65dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/home_label_credit"
        android:id="@+id/home_label_about"
        android:clickable="true"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        android:textColor="@color/colorTextGrey"
        android:layout_marginBottom="20dp"
        android:textSize="16sp"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/home_button_play"
        android:id="@+id/home_button_play"
        android:layout_below="@+id/imageView2"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:minWidth="220dp"
        android:textSize="16sp"
        android:textColor="@color/colorButtonTextWhite"
        android:background="@color/colorButtonBackgroundRed"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/home_button_achievements"
        android:id="@+id/home_button_achievements"
        android:minWidth="160dp"
        android:textSize="12sp"
        android:textColor="@color/colorButtonTextDark"
        android:background="@color/colorButtonBackgroundGrey"
        android:layout_below="@+id/home_button_play"
        android:layout_marginTop="15dp"
        android:layout_centerHorizontal="true"
        android:maxHeight="20dp"/>


</RelativeLayout>
